# SignInWebApp

./: .gitattributes  .gitignore  Dockerfile  LICENSE.md  README.md  deploy.service  deploy.timer  docker-compose.deploy.yml  docker-compose.yml  init-db  kanboard-Dockerfile  pyproject.toml  requirements.txt  signin-cli  uwsgi.ini
.github/: CODEOWNERS
.github/workflows/: black.yml  image-build-push.yml  ruff.yaml
appdata/: .gitignore  Caddyfile  config.php  cssignin.defaults.yaml
appdata/nginx/: app.conf
migrations/: env.py
migrations/versions/: 073aa9bc98d2_email_as_signin.py  0f07a3edd643_role_system.py  235dba32858b_sqlalchemy_2.0.py  7a297468f586_initial_migration.py  7bafa58010d4_email_as_signin_part_2.py  9b0e597da71c_pronouns.py
signinapp/: __init__.py  active.py  admin.py  auth.py  badge.py  dbadmin.py  dict_model.py  event.py  events.py  finance.py  forms.py  jobs.py  mentor.py  model.py  proxy.py  qr.py  roles.py  search.py  setupdb.py  signin.db  team.py  user.py  util.py  views.py  webapp.py
signinapp/admin/: __init__.py  active.py  badges.py  events.py  role.py  subteam.py  users.py  util.py
signinapp/models/: base.py  dict_model.py  sqlite_model.py
signinapp/static/: .gitignore  custom.scss  qr.js  scan.css  toast.css
signinapp/templates/: active.html.jinja2  admin_events.html.jinja2  admin_main.html  admin_main.html.jinja2  admin_user.html  admin_user.html.jinja2  admin_users.html.jinja2  badge.html.jinja2  badges.html.jinja2  base.html  base.html.jinja2  error.html  error.html.jinja2  event.html.jinja2  event_register.html.jinja2  event_stats.html.jinja2  events.html.jinja2  finance.html.jinja2  form.html.jinja2  hourssearchform.html.jinja2  index.html  index.html.jinja2  login.html  login.html.jinja2  open_events.html.jinja2  password.html.jinja2  profile.html.jinja2  qr.html.jinja2  register.html  register.html.jinja2  scan.html.jinja2  searchform.html.jinja2  selfscan.html.jinja2  shirts.html.jinja2  subteam.html.jinja2  user_list.html.jinja2  users.html.jinja2
signinapp/templates/admin/: active.html.jinja2  badges.html.jinja2  event.html.jinja2  events.html.jinja2  form.html.jinja2  main.html.jinja2  roles.html.jinja2  subteams.html.jinja2  user.html.jinja2  users.html.jinja2
signinapp/templates/auth/: forbidden.html.jinja2  login.html.jinja2  password.html.jinja2  register.html.jinja2
signinapp/templates/search/: badges.html.jinja2  base.html.jinja2  events.html.jinja2  hours.html.jinja2
